<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15sp"
        android:layout_marginStart="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            android:paddingTop="20sp" />

        <Spinner
            android:id="@+id/mr_d_spinner_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5sp"
        android:layout_marginBottom="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mr_d_label_action"
            android:paddingTop="10sp" />

        <Spinner
            android:id="@+id/mr_d_spinner_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:entries="@array/spinner_action_items"
            android:prompt="@string/spinner_action_prompt" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mr_d_label_date" />

        <Button
            android:id="@+id/mr_d_button_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_date_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mr_d_label_time" />

        <Button
            android:id="@+id/mr_d_button_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mr_d_label_time_hint" />

    </LinearLayout>

</LinearLayout>