<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            android:paddingTop="20sp" />

        <Spinner
            android:id="@+id/sc_d_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/light_gray" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_display_range" />

        <Button
            android:id="@+id/sc_d_button_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_date_hint" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingStart="15dp"
        android:paddingEnd="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_from_to" />

        <Button
            android:id="@+id/sc_d_button_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_date_hint" />
    </LinearLayout>
</LinearLayout>
