<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80sp"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_new_password" />

        <EditText
            android:id="@+id/cp_a_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_new_password_again" />

        <EditText
            android:id="@+id/cp_a_et_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:autofillHints=""
            tools:ignore="LabelFor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cp_a_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cp_a_label_agree" />

        </LinearLayout>

        <Button
            android:id="@+id/cp_a_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cp_a_label_start"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/bg_blue_button"
            android:layout_margin="15sp"/>

        <TextView
            android:id="@+id/cp_a_text_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_terms_of_use"
            android:textStyle="bold"
            android:textColor="@color/light_blue"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>