<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextClock
            android:id="@+id/home_f_clock_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_margin="10dp"
            android:textSize="30sp"
            android:gravity="center"
            android:timeZone="Asia/Tokyo"
            android:format24Hour="yyyy/MM/dd(E)"
            android:format12Hour="yyyy/MM/dd(E)"/>

        <TextClock
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:format12Hour="hh:mm a"
            android:format24Hour="HH:mm"
            android:textSize="60sp"
            android:gravity="center"
            android:timeZone="GMT+900" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/home_f_button_work"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default"
                android:text="@string/label_work"
                android:textSize="27sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/home_f_button_break"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default"
                android:text="@string/label_break"
                android:textSize="27sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/home_f_button_outing"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@android:drawable/btn_default"
                android:text="@string/label_outing_return"
                android:textSize="22sp"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <LinearLayout
            android:id="@+id/home_f_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>
</LinearLayout>